roles/11-kubernetes/files/bucket.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bucket
  namespace: vols
spec:
  containers:
  - name: nginx
    image: nginx
