roles/11-kubernetes/files/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-deployment
  labels:
    app: helloworld
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
        - name: helloworld
          image: registry.hpc.ut.ee/sysadmincourse-dev/hello-world:1.0
          ports:
            - containerPort: 5000
          imagePullPolicy: Never
