roles/11-kubernetes/files/glutton-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glutton
spec:
  replicas: 1
  selector:
    matchLabels:
      app: glutton
  template:
    metadata:
      labels:
        app: glutton
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 20m
            memory: 50Mi
          requests:
            cpu: 10m
            memory: 20Mi
        args:
        - -cpus
        - "2"
        - -mem-total
        - "70Mi"
        - -mem-alloc-size
        - "60Mi"
        - -mem-alloc-sleep
        - "1s"
