roles/11-kubernetes/files/laptop-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: laptop
  namespace: vols
spec:
  containers:
  - name: nginx
    image: nginx
    volumeMounts:
    - name: laptop-vol
      mountPath: /laptop
  volumes:
  - name: laptop-vol
    configMap:
      name: laptop
