roles/11-kubernetes/files/simple.yaml
apiVersion: v1
kind: Pod
metadata:
    name: myfirstpod  
spec:
    containers:
    - image: nginx
      name: user
